# SatisfactoryModLoader

./: .editorconfig  .gitignore  .gitmodules  AFGCharacterPlayer.cpp  BUG_TODO.md  BeginPlayEvent.h  CREDITS.md  Config.cpp  Config.h  Connection.cpp  Connection.h  Daedalus.sln  Daedalus.vcxproj  DemoEvent.cpp  DemoEvent.h  DetoredEvents.cpp  DetoredEvents.h  Detours.vcxproj  Dispatcher.cpp  Dispatcher.h  DllMain.h  EnterChatMessageEvent.h  Event.cpp  Event.h  EventLoader.cpp  EventLoader.h  Events.h  FGBuildableConveyorLift.cpp  FactoryGame.uproject  FoliagePickupEvent.cpp  FoliagePickupEvent.h  INSTALL.md  InventoryHasAuthorityEvent.h  Main.cpp  Mod.cpp  Mod.h  ModHandler.cpp  ModHandler.h  README.md  Reflection.cpp  (+17 more)
BaseMod/: BaseMod.cpp  BaseMod.h  BaseMod.sln  BaseMod.vcxproj  ExampleMod.cpp  ModEvents.cpp  ModEvents.h  ModInfo.cpp  ModInfo.h  cpp.hint  dllmain.cpp  export.h  utility.cpp  utility.h
Config/: DefaultCSLocToolsSettings.ini  DefaultDeviceProfiles.ini  DefaultEditor.ini  DefaultEngine.ini  DefaultGame.ini  DefaultGameUserSettings.ini  DefaultGameplayTags.ini  DefaultHardware.ini  DefaultInput.ini  DefaultScalability.ini
Content/: BTD_DistanceCheck.uasset  BTT_AddLocalMovementInput.uasset  IA_DetachedCamera_MoveDown.uasset  IA_DetachedCamera_MoveUp.uasset  Widget_ColorPicker_Preview.uasset
Daedalus/: Config.cpp  Loader.cpp  Main.cpp  Mod.cpp  Mod.h
DaedalusLoader/: Daedalus.sln  DaedalusLoader.vcxproj  EventSystem.h  (+8 more)
Plugins/SML/ModdingCrashReporter/: Build_Windows.bat  Cargo.toml  rustfmt.toml
Plugins/SML/ModdingCrashReporter/src/: main.rs
(+39897 files in other folders)
